nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-app
  name: whoami-svc
  namespace: default
spec:
  ports:
    - port: 8888        # Service port
      protocol: TCP
      name: app-port
      targetPort: 80
  type: ClusterIP
  selector:
    app: nginx-app
---
